force-app/main/default/objects/Consignment_Item__c/Consignment_Item__c.object-meta.xml
<CustomObject>
    <label>Consignment Item</label>
    <pluralLabel>Consignment Items</pluralLabel>
    <nameField>
        <label>Consignment Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>