force-app/main/default/objects/Consignment_Item__c/fields/AI_Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Status_Summary__c</fullName>
    <label>AI Status Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>