force-app/main/default/objects/Consignment_Item__c/fields/Authentication_Result__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Result__c</fullName>
    <label>Authentication Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>