force-app/main/default/objects/Consignment_Item__c/fields/Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Buy_Price__c</fullName>
    <label>Buy Price</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>