force-app/main/default/objects/Consignment_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Handbag</fullName>
            </value>
            <value>
                <fullName>Watch</fullName>
            </value>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Shoes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>