force-app/main/default/objects/Consignment_Item__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intake Received</fullName>
            </value>
            <value>
                <fullName>Verification Assigned</fullName>
            </value>
            <value>
                <fullName>Verification Complete</fullName>
            </value>
            <value>
                <fullName>Cleaning Queue</fullName>
            </value>
            <value>
                <fullName>Escalation Pending</fullName>
            </value>
            <value>
                <fullName>Senior Review Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Automation Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>