force-app/main/default/objects/Consignment_Item__c/fields/Evidence_Log__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Log__c</fullName>
    <label>Evidence Log</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>