force-app/main/default/objects/Consignment_Item__c/fields/External_Consignment_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Consignment_ID__c</fullName>
    <label>External Consignment ID</label>
    <type>Text</type>
    <length>80</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>