force-app/main/default/objects/Consignment_Item__c/fields/Intake_Channel__c.field-meta.xml
<CustomField>
    <fullName>Intake_Channel__c</fullName>
    <label>Intake Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>