force-app/main/default/objects/Consignment_Item__c/fields/Item_Brand__c.field-meta.xml
<CustomField>
    <fullName>Item_Brand__c</fullName>
    <label>Item Brand</label>
    <type>Text</type>
    <length>100</length>
</CustomField>