force-app/main/default/objects/Consignment_Item__c/fields/Item_Model__c.field-meta.xml
<CustomField>
    <fullName>Item_Model__c</fullName>
    <label>Item Model</label>
    <type>Text</type>
    <length>100</length>
</CustomField>