force-app/main/default/objects/Consignment_Item__c/fields/Jira_Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Jira_Issue_Key__c</fullName>
    <label>Jira Issue Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>