force-app/main/default/objects/Consignment_Item__c/fields/Next_Best_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Action__c</fullName>
    <label>Next Best Action</label>
    <type>Text</type>
    <length>255</length>
</CustomField>