force-app/main/default/objects/Consignment_Item__c/fields/Seller_Phone__c.field-meta.xml
<CustomField>
    <fullName>Seller_Phone__c</fullName>
    <label>Seller Phone</label>
    <type>Phone</type>
</CustomField>