force-app/main/default/objects/Consignment_Item__c/fields/Selling_Price_Max__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price_Max__c</fullName>
    <label>Selling Price Max</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>