force-app/main/default/objects/Consignment_Item__c/fields/Verifier_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Verifier_Confidence__c</fullName>
    <label>Verifier Confidence</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>