force-app/main/default/objects/Consignment_Item__c/fields/Workato_Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Workato_Correlation_ID__c</fullName>
    <label>Workato Correlation ID</label>
    <type>Text</type>
    <length>80</length>
    <unique>true</unique>
</CustomField>